--- a/Engine/Core/Core.csproj
+++ b/Engine/Core/Core.csproj
@@ -46,10 +46,16 @@
     <Compile Include="IApplication.cs" />
     <Compile Include="Assert.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="Log\ConsoleLogWriter.cs" />
+    <Compile Include="Log\ILogWriter.cs" />
+    <Compile Include="Log\Logger.cs" />
+    <Compile Include="Log\EventData.cs" />
+    <Compile Include="Log\DebuggerLogWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window\WPFWindow.cs" />
     <Compile Include="Window\IWindow.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
