Introduced scoped log groups. Renamed Logger to Log and made methods static for compacter access to Default log (former Global). Better log group handling.

--- a/Engine/Core/Core.csproj
+++ b/Engine/Core/Core.csproj
@@ -48,9 +48,10 @@
     <Compile Include="Engine.cs" />
     <Compile Include="Log\ConsoleLogWriter.cs" />
     <Compile Include="Log\ILogWriter.cs" />
-    <Compile Include="Log\Logger.cs" />
+    <Compile Include="Log\Log.cs" />
     <Compile Include="Log\EventData.cs" />
     <Compile Include="Log\DebuggerLogWriter.cs" />
+    <Compile Include="Log\ScopedLogGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window\WPFWindow.cs" />
     <Compile Include="Window\IWindow.cs" />
