--- a/RendererDX12/RendererDX12.csproj
+++ b/RendererDX12/RendererDX12.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D1DFFD2-AB23-45B8-B4F2-D1FD8F07B26C}</ProjectGuid>
+    <ProjectGuid>{6F3B8AFD-A714-4DD9-9629-7ED76635DDA7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClearSight.RendererAbstract</RootNamespace>
-    <AssemblyName>RendererAbstract</AssemblyName>
+    <RootNamespace>ClearSight.RendererDX12</RootNamespace>
+    <AssemblyName>RendererDX12</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -41,24 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binding\DescriptorHeap.cs" />
-    <Compile Include="CommandSubmission\Command.cs" />
-    <Compile Include="CommandSubmission\CommandList.cs" />
-    <Compile Include="Binding\RootSignature.cs" />
-    <Compile Include="CommandSubmission\Fence.cs" />
     <Compile Include="Device.cs" />
-    <Compile Include="Memory\PipelineState.cs" />
-    <Compile Include="Memory\Resource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CommandSubmission\CommandQueue.cs" />
-    <Compile Include="Memory\Heap.cs" />
-    <Compile Include="DeviceChild.cs" />
     <Compile Include="SwapChain.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Core\Core.csproj">
       <Project>{c6258fac-b0c7-482f-80ce-8ea5acd64a65}</Project>
       <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RendererAbstract\RendererAbstract.csproj">
+      <Project>{7d1dffd2-ab23-45b8-b4f2-d1fd8f07b26c}</Project>
+      <Name>RendererAbstract</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
