--- a/Samples/SimpleWin/SimpleDesktop/SimpleDesktop.csproj
+++ b/Samples/SimpleWin/SimpleDesktop/SimpleDesktop.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SimpleDesktop</RootNamespace>
     <AssemblyName>SimpleDesktop</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,14 @@
     <ProjectReference Include="..\..\..\Engine\Core\Core.csproj">
       <Project>{c6258fac-b0c7-482f-80ce-8ea5acd64a65}</Project>
       <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\RendererAbstract\RendererAbstract.csproj">
+      <Project>{7d1dffd2-ab23-45b8-b4f2-d1fd8f07b26c}</Project>
+      <Name>RendererAbstract</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\RendererDX12\RendererDX12.csproj">
+      <Project>{6f3b8afd-a714-4dd9-9629-7ed76635dda7}</Project>
+      <Name>RendererDX12</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
