--- a/RendererDX12/RendererDX12.csproj
+++ b/RendererDX12/RendererDX12.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandSubmission\CommandQueue.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwapChain.cs" />
