--- a/Samples/SimpleWin/SimpleDesktop/SimpleDesktop.csproj
+++ b/Samples/SimpleWin/SimpleDesktop/SimpleDesktop.csproj
@@ -43,6 +43,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
