--- a/RendererGL4/RendererGL4.csproj
+++ b/RendererGL4/RendererGL4.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D1DFFD2-AB23-45B8-B4F2-D1FD8F07B26C}</ProjectGuid>
+    <ProjectGuid>{FEFAE7F3-61F3-47A4-ABB6-7132A07762CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClearSight.RendererAbstract</RootNamespace>
-    <AssemblyName>RendererAbstract</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>RendererGL4</RootNamespace>
+    <AssemblyName>RendererGL4</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,7 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,29 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binding\DescriptorHeap.cs" />
-    <Compile Include="Binding\TargetDescriptions.cs" />
-    <Compile Include="CommandSubmission\CommandList.cs" />
-    <Compile Include="Binding\RootSignature.cs" />
-    <Compile Include="CommandSubmission\CommandAllocationPolicy.cs" />
-    <Compile Include="CommandSubmission\CommandAllocator.cs" />
-    <Compile Include="CommandSubmission\Fence.cs" />
-    <Compile Include="CommandSubmission\ResourceUsage.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Memory\Enums.cs" />
-    <Compile Include="Memory\PipelineState.cs" />
-    <Compile Include="Memory\Resource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CommandSubmission\CommandQueue.cs" />
-    <Compile Include="Memory\Heap.cs" />
-    <Compile Include="DeviceChild.cs" />
-    <Compile Include="SwapChain.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Engine\Core\Core.csproj">
-      <Project>{c6258fac-b0c7-482f-80ce-8ea5acd64a65}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
